HSEARCH-4795 Change to parsing javadoc only instead of AP for collecting config properties